fixing layout issues

--- a/react-app/src/components/FullPreview/fullPreview.css
+++ b/react-app/src/components/FullPreview/fullPreview.css
@@ -1,13 +1,80 @@
-#layout-in {
-    animation: fade-page 2s;
+.layout-in {
+    animation: fade-page 1.7s;
 }
 
 @keyframes fade-page {
    0% {
        opacity: 0;
-
+   }
+   50% {
+       opacity: 0;
    }
     100% {
         opacity: 1;
+    }
+}
+
+.transition-my-site {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    height: 100%;
+    width: 100%;
+}
+
+.my-site {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.expand {
+    margin-top: 15%;
+    width: 20%;
+    height: 20%;
+    animation: load-page 2s forwards;
+}
+
+@keyframes load-page {
+    0% {
+        width: 0%;
+        height: 0%;
+        border-radius: 0%;
+        margin-top: 18.5%;
+    }
+    35% {
+        width: 15%;
+        height: 15%;
+        margin-top: 16.2%;
+    }
+    70% {
+        width: 5%;
+        height: 5%;
+        margin-top: 18.5%;
+    }
+    100% {
+        width: 100%;
+        height: 100%;
+        margin-top: 0;
+    }
+}
+
+#contract {
+    animation: minimize 1s forwards;
+}
+
+@keyframes minimize {
+    0% {
+        width: 100%;
+        height: 100%;
+        margin-top: 0;
+    }
+    100% {
+        width: 0%;
+        height: 0%;
+        border-radius: 0%;
+        margin-top: 19.5%;
     }
 }
